welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
	if (temp1<0 && temps2>100){return true}
	if (temp1>100 && temp1<0){return true}
	else {return false}
}
